WeeChat ChangeLog
=================
Sébastien Helleu <flashcode@flashtux.org>
v0.3.5-dev, 2011-02-10


Version 0.3.5 (under dev!)
--------------------------

* core: add option weechat.look.read_marker_string
* core: improve display of commands lists in /help (add arguments -list
  and -listfull) (task #10299)
* core: improve arguments displayed in /help of commands
* core: fix terminal title when $TERM starts with "screen"
* core: add some chars after cursor when scrolling input line: new option
  weechat.look.input_cursor_scroll (bug #21391)
* core: add color "gray"
* core: dynamically allocate color pairs (extended colors can be used without
  being added with command "/color")
* core: allow background for nick colors (using "/")
* irc: fix crash when completing /part command on a non-irc buffer (bug #32402)
* irc: add many missing commands for target buffer (options irc.msgbuffer.xxx)
  (bug #32216)
* lua: fix crash when many scripts are executing callbacks at same time
* xfer: do not close chat buffers when removing xfer from list (bug #32271)

Version 0.3.4 (2011-01-16)
--------------------------

* core: add 256 colors support, new command /color, new section "palette" in
  weechat.conf (task #6834)
* core: fix scroll problem on buffers with free content and non-allocated lines
  (bug #32039)
* core: add info "weechat_upgrading", signal "upgrade_ended", display duration
  of upgrade
* core: replace the 10 nick color options and number of nick colors by a single
  option "weechat.color.chat_nick_colors" (comma separated list of colors)
* core: add support of python 2.7 in cmake and configure (debian #606989)
* core: add color support in option weechat.look.buffer_time_format
* core: call to hook_config when config option is created
* core: add new option weechat.look.highlight_regex and function
  string_has_highlight_regex in plugin API (task #10321)
* core: fix infinite loop on gnutls handshake when connecting with SSL to server