@@ -21,6 +21,7 @@
 #cmakedefine HAVE_BACKTRACE
 #cmakedefine ICONV_2ARG_IS_CONST 1
 #cmakedefine HAVE_TCL_CREATE_NS
+#cmakedefine HAVE_MALLINFO
 #define PACKAGE_VERSION "@VERSION@"
 #define PACKAGE "@PROJECT_NAME@"
 #define PACKAGE_NAME "@PROJECT_NAME@"
