@@ -145,17 +145,18 @@ Erweiterung: Name der Erweiterung ('weechat' für interne WeeChat Befehle)
 /debug  list
         set <plugin> <level>
         dump [<plugin>]
-        buffer|windows|term|color
+        buffer|color|memory|term|windows
 
-   list: zeigt alle Erweiterungen mit Debuglevel an
-    set: setzt den Level der Protokollierung für eine Erweiterung
- plugin: Name der Erweiterung ("core" für den WeeChat Kern)
-  level: Debuglevel der Erweiterung (0 = deaktiviert das Debug)
-   dump: Speicherabbild in die WeeChat Protokolldatei schreiben (wie bei einem Programmabsturz)
- buffer: speichert den Bufferinhalt als hexadezimale Ausgabe in die Protokolldatei
-windows: zeigt die Fensterstruktur an
-   term: gibt Informationen über das Terminal und verfügbare Farben aus.
-  color: zeigt Informationen über die aktuellen Farbpaarungen an.
+   list: list plugins with debug levels
+    set: set debug level for plugin
+ plugin: name of plugin ("core" for WeeChat core)
+  level: debug level for plugin (0 = disable debug)
+   dump: save memory dump in WeeChat log file (same dump is written when WeeChat crashes)
+ buffer: dump buffer content with hexadecimal values in log file
+  color: display infos about current color pairs
+ memory: display infos about memory usage
+   term: display infos about terminal
+windows: display windows tree
 ........................................
 
 [command]*`filter`* Filterfunktion um Nachrichten in Buffern zu aus- oder einzublenden, dazu können Tags oder regulären Ausdrücken verwendet werden::
