@@ -145,7 +145,7 @@ extension: nom de l'extension ('weechat' pour une commande interne WeeChat)
 /debug  list
         set <extension> <niveau>
         dump [<extension>]
-        buffer|windows|term|color
+        buffer|color|memory|term|windows
 
      list: lister les extensions avec leur niveau de debug
       set: définir le niveau de debug pour l'extension
@@ -153,9 +153,10 @@ extension: nom de l'extension ("core" pour le coeur de WeeChat)
    niveau: niveau de debug pour l'extension
      dump: afficher les variables mémoire WeeChat dans le fichier log (les mêmes messages sont affichés lorsque WeeChat plante)
    buffer: afficher le contenu du tampon en valeurs hexadécimales dans le fichier log
-  windows: afficher l'arbre des fenêtres
-     term: afficher des infos sur le terminal
     color: afficher des infos sur les paires de couleur courantes
+   memory: afficher des infos sur l'utilisation de la mémoire
+     term: afficher des infos sur le terminal
+  windows: afficher l'arbre des fenêtres
 ........................................
 
 [command]*`filter`* filtrer les messages dans les tampons, pour les cacher/afficher selon des tags ou expressions régulières::
