@@ -145,7 +145,7 @@ comando: comando da eseguire (una '/' viene aggiunta automaticamente se non trov
 /debug  list
         set <plugin> <level>
         dump [<plugin>]
-        buffer|windows|term|color
+        buffer|color|memory|term|windows
 
    list: list plugins with debug levels
     set: set debug level for plugin
@@ -153,9 +153,10 @@ comando: comando da eseguire (una '/' viene aggiunta automaticamente se non trov
   level: debug level for plugin (0 = disable debug)
    dump: save memory dump in WeeChat log file (same dump is written when WeeChat crashes)
  buffer: dump buffer content with hexadecimal values in log file
-windows: display windows tree
-   term: display infos about terminal
   color: display infos about current color pairs
+ memory: display infos about memory usage
+   term: display infos about terminal
+windows: display windows tree
 ........................................
 
 [command]*`filter`* filtra messaggi nei buffer, per nascondere/mostrare in base a tag o regexp::
