@@ -7,6 +7,7 @@ v0.3.5-dev, 2011-02-10
 Version 0.3.5 (under dev!)
 --------------------------
 
+* core: add option "memory" to command /debug
 * core: add option weechat.look.read_marker_string
 * core: improve display of commands lists in /help (add arguments -list
   and -listfull) (task #10299)
